2009-08-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/statistics/HistogramDataset.java
    (addSeries): Fire dataset change event.

2009-11-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PolarPlot.java
    (axis): Removed,
    (dataset): Likewise,
    (renderer): Likewise,
    (axes): New field,
    (axisLocations): Likewise,
    (datasets): Likewise,
    (renderers): Likewise,
    (datasetToAxesMap): Likewise,
    (PolarPlot(XYDataset, ValueAxis, PolarItemRenderer)): Initialise new fields,
    (getAxis): Delegate to new method,
    (ValueAxis getAxis(int)): New method,
    (setAxis(ValueAxis)): Delegate to new method,
    (setAxis(int, ValueAxis)): New method,
    (setAxis(int, ValueAxis, boolean)): Likewise,
    (getAxisLocation): New method,
    (getAxisLocation(int)): Likewise,
    (setAxisLocation(PolarAxisLocation)): Likewise,
    (setAxisLocation(PolarAxisLocation, boolean)): Likewise,
    (getDataset): Delegate to new method,
    (getDataset(int)): New method,
    (setDataset(XYDataset)): Delegate to new method,
    (setDataset(int, XYDataset)): New method,
    (indexOf(XYDataset)): New method,
    (getRenderer): Delegate to new method,
    (getRenderer(int)): New method,
    (setRenderer(PolarItemRenderer)): Delegate to new method,
    (setRenderer(int, PolarItemRenderer)): New method,
    (setRenderer(int, PolarItemRenderer, boolean)): New method,
    (mapDatasetToAxis(int, int)): New method,
    (mapDatasetToAxes(int, List)): New method,
    (checkAxisIndices(List)): New private method,
    (getAxisForDataset(int)): New method,
    (draw): Updated to support multiple datasets, axes and renderers,
    (drawAxis): Handle alternative axis locations,
    (render): Handle multiple datasets,
    (drawGridlines): Fetch primary axis,
    (zoom): Added FIXME,
    (getDataRange): Likewise,
    (datasetChanged): Likewise,
    (getLegendItems): Likewise,