@@ -71,6 +71,8 @@
  * 03-Jan-2008 : Check visibility of average marker before drawing it (DG);
  * 27-Mar-2008 : If boxPaint is null, revert to itemPaint (DG);
  * 27-Mar-2009 : Added findRangeBounds() method override (DG);
+ * 08-Dec-2009 : Fix for bug 2909215, NullPointerException for null
+ *               outliers (DG);
  *
  */
 
@@ -333,18 +335,10 @@ public class XYBoxAndWhiskerRenderer extends AbstractXYItemRenderer
      *                        (<code>null</code> permitted).
      * @param pass  the pass index.
      */
-    public void drawItem(Graphics2D g2,
-                         XYItemRendererState state,
-                         Rectangle2D dataArea,
-                         PlotRenderingInfo info,
-                         XYPlot plot,
-                         ValueAxis domainAxis,
-                         ValueAxis rangeAxis,
-                         XYDataset dataset,
-                         int series,
-                         int item,
-                         CrosshairState crosshairState,
-                         int pass) {
+    public void drawItem(Graphics2D g2, XYItemRendererState state,
+            Rectangle2D dataArea, PlotRenderingInfo info, XYPlot plot,
+            ValueAxis domainAxis, ValueAxis rangeAxis, XYDataset dataset,
+            int series, int item, CrosshairState crosshairState, int pass) {
 
         PlotOrientation orientation = plot.getOrientation();
 
@@ -377,17 +371,10 @@ public class XYBoxAndWhiskerRenderer extends AbstractXYItemRenderer
      *                        (<code>null</code> permitted).
      * @param pass  the pass index.
      */
-    public void drawHorizontalItem(Graphics2D g2,
-                                   Rectangle2D dataArea,
-                                   PlotRenderingInfo info,
-                                   XYPlot plot,
-                                   ValueAxis domainAxis,
-                                   ValueAxis rangeAxis,
-                                   XYDataset dataset,
-                                   int series,
-                                   int item,
-                                   CrosshairState crosshairState,
-                                   int pass) {
+    public void drawHorizontalItem(Graphics2D g2, Rectangle2D dataArea,
+            PlotRenderingInfo info, XYPlot plot, ValueAxis domainAxis,
+            ValueAxis rangeAxis, XYDataset dataset, int series,
+            int item, CrosshairState crosshairState, int pass) {
 
         // setup for collecting optional entity info...
         EntityCollection entities = null;
@@ -524,17 +511,10 @@ public class XYBoxAndWhiskerRenderer extends AbstractXYItemRenderer
      *                        (<code>null</code> permitted).
      * @param pass  the pass index.
      */
-    public void drawVerticalItem(Graphics2D g2,
-                                 Rectangle2D dataArea,
-                                 PlotRenderingInfo info,
-                                 XYPlot plot,
-                                 ValueAxis domainAxis,
-                                 ValueAxis rangeAxis,
-                                 XYDataset dataset,
-                                 int series,
-                                 int item,
-                                 CrosshairState crosshairState,
-                                 int pass) {
+    public void drawVerticalItem(Graphics2D g2, Rectangle2D dataArea,
+            PlotRenderingInfo info, XYPlot plot, ValueAxis domainAxis,
+            ValueAxis rangeAxis, XYDataset dataset, int series,
+            int item, CrosshairState crosshairState, int pass) {
 
         // setup for collecting optional entity info...
         EntityCollection entities = null;
@@ -553,6 +533,11 @@ public class XYBoxAndWhiskerRenderer extends AbstractXYItemRenderer
         Number yQ1Median = boxAndWhiskerData.getQ1Value(series, item);
         Number yQ3Median = boxAndWhiskerData.getQ3Value(series, item);
         List yOutliers = boxAndWhiskerData.getOutliers(series, item);
+        // yOutliers can be null, but we'd prefer it to be an empty list in
+        // that case...
+        if (yOutliers == null) {
+            yOutliers = Collections.EMPTY_LIST;
+        }
 
         double xx = domainAxis.valueToJava2D(x.doubleValue(), dataArea,
                 plot.getDomainAxisEdge());
@@ -574,7 +559,6 @@ public class XYBoxAndWhiskerRenderer extends AbstractXYItemRenderer
         double yyQ3Median = rangeAxis.valueToJava2D(yQ3Median.doubleValue(),
                 dataArea, location);
         double yyOutlier;
-
 
         double exactBoxWidth = getBoxWidth();
         double width = exactBoxWidth;
@@ -657,7 +641,6 @@ public class XYBoxAndWhiskerRenderer extends AbstractXYItemRenderer
          * an arraylist. If there are any farouts, set the flag on the
          * OutlierListCollection
          */
-
         for (int i = 0; i < yOutliers.size(); i++) {
             double outlier = ((Number) yOutliers.get(i)).doubleValue();
             if (outlier > boxAndWhiskerData.getMaxOutlier(series,
